work on dataset class

--- a/detection.ipynb
+++ b/detection.ipynb
@@ -43,22 +43,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/gkmo/workstation/mestrado/projects/rgbd-yolov2/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from model import model_builder\n",
     "import torch\n",
-    "import lightnet as ln"
+    "import lightnet as ln\n",
+    "from torch.utils.data import Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## "
    ]
   },
   {
@@ -143,53 +142,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RegionLoss(\n",
-      "  classes=3, network_stride=32, IoU threshold=0.6, seen=2\n",
-      "  coord_scale=1.0, object_scale=5.0, noobject_scale=1.0, class_scale=1.0\n",
-      "  anchors=[1.3221, 1.7314] [3.1927, 4.0094] [5.0559, 8.0989] [9.4711, 4.8405] [11.236, 10.007]\n",
-      ")\n",
-      "torch.Size([1, 2, 5])\n",
-      "torch.Size([1, 30, 13, 13])\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "shape '[-1, 3]' is invalid for input of size 845",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(y\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(y_pred\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m----> 9\u001b[0m loss \u001b[38;5;241m=\u001b[39m \u001b[43mloss_fn\u001b[49m\u001b[43m(\u001b[49m\u001b[43my_pred\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(loss\u001b[38;5;241m.\u001b[39mvalues)\n",
-      "File \u001b[0;32m~/workstation/mestrado/projects/rgbd-yolov2/.venv/lib/python3.12/site-packages/lightnet/network/loss/_base.py:29\u001b[0m, in \u001b[0;36mLoss.__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__call__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m---> 29\u001b[0m     ret \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__call__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     30\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reduction:\n\u001b[1;32m     31\u001b[0m         ret \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreduce(ret)\n",
-      "File \u001b[0;32m~/workstation/mestrado/projects/rgbd-yolov2/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py:1736\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1734\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1735\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1736\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/workstation/mestrado/projects/rgbd-yolov2/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py:1747\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1742\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1743\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1744\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1745\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1746\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1747\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1749\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   1750\u001b[0m called_always_called_hooks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n",
-      "File \u001b[0;32m~/workstation/mestrado/projects/rgbd-yolov2/.venv/lib/python3.12/site-packages/lightnet/network/loss/_region.py:164\u001b[0m, in \u001b[0;36mRegionLoss.forward\u001b[0;34m(self, output, target, seen)\u001b[0m\n\u001b[1;32m    162\u001b[0m conf \u001b[38;5;241m=\u001b[39m output[:, :, \u001b[38;5;241m4\u001b[39m]\u001b[38;5;241m.\u001b[39msigmoid()\n\u001b[1;32m    163\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m nC \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m--> 164\u001b[0m     \u001b[38;5;28mcls\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[43moutput\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtranspose\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreshape\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnC\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    166\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mno_grad():\n\u001b[1;32m    167\u001b[0m     \u001b[38;5;66;03m# Create prediction boxes\u001b[39;00m\n\u001b[1;32m    168\u001b[0m     pred_boxes \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mFloatTensor(nB\u001b[38;5;241m*\u001b[39mnA\u001b[38;5;241m*\u001b[39mnPixels, \u001b[38;5;241m4\u001b[39m)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: shape '[-1, 3]' is invalid for input of size 845"
-     ]
-    }
-   ],
-   "source": [
-    "loss = 0\n",
-    "X = torch.rand((1, 3, 416, 416))\n",
-    "y = torch.rand((1, 2, 5))\n",
-    "print(loss_fn)\n",
-    "y_pred = model(X)\n",
-    "\n",
-    "print(y.shape)\n",
-    "print(y_pred.shape)\n",
-    "loss = loss_fn(y_pred, y)\n",
-    "print(loss.values)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -228,6 +180,207 @@
     "# Print loss\n",
     "print(loss.values)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Custom Dataset "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "root_dir = Path(\"data\")\n",
+    "labels_dir = root_dir / \"labels\"\n",
+    "img_dir = root_dir / \"data_object_image_2/training/image_2\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7481"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list((labels_dir).glob(\"*.txt\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('data/labels')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels_dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from pathlib import Path\n",
+    "import torch\n",
+    "from torch.utils.data import Dataset\n",
+    "from PIL import Image\n",
+    "import torchvision.transforms as T\n",
+    "\n",
+    "class YoloDarknetDataset(Dataset):\n",
+    "    def __init__(self, images_dir, labels_dir, classes, transform=None):\n",
+    "        \"\"\"\n",
+    "        Args:\n",
+    "            images_dir (str or Path): Path to the directory containing images.\n",
+    "            labels_dir (str or Path): Path to the directory containing labels.\n",
+    "            classes (list): List of class names.\n",
+    "            transform (callable, optional): Transform to be applied on an image.\n",
+    "        \"\"\"\n",
+    "        self.images_dir = Path(images_dir)\n",
+    "        self.labels_dir = Path(labels_dir)\n",
+    "        self.transform = transform\n",
+    "        self.classes = classes\n",
+    "\n",
+    "        # Gather all image files in the directory\n",
+    "        self.image_files = sorted([p for p in self.images_dir.glob('*') if p.suffix in ['.jpg', '.jpeg', '.png']])\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.image_files)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        # Load the image\n",
+    "        img_path = self.image_files[idx]\n",
+    "        img = Image.open(img_path).convert('RGB')\n",
+    "\n",
+    "        # Apply transforms if specified\n",
+    "        if self.transform:\n",
+    "            img = self.transform(img)\n",
+    "\n",
+    "        # Load the corresponding label file\n",
+    "        label_path = self.labels_dir / f\"{img_path.stem}.txt\"\n",
+    "        boxes, labels = self._load_labels(label_path)\n",
+    "\n",
+    "        # Convert boxes and labels to tensors\n",
+    "        boxes = torch.tensor(boxes, dtype=torch.float32)\n",
+    "        labels = torch.tensor(labels, dtype=torch.int64)\n",
+    "\n",
+    "        return img, {'boxes': boxes, 'labels': labels}\n",
+    "\n",
+    "    def _load_labels(self, label_path):\n",
+    "        \"\"\"\n",
+    "        Load labels from a Darknet format .txt file without converting to pixel coordinates.\n",
+    "        \n",
+    "        Args:\n",
+    "            label_path (Path): Path to the .txt file.\n",
+    "        \n",
+    "        Returns:\n",
+    "            boxes (list of lists): Bounding boxes in normalized coordinates [x_center, y_center, width, height].\n",
+    "            labels (list): Class labels.\n",
+    "        \"\"\"\n",
+    "        boxes = []\n",
+    "        labels = []\n",
+    "\n",
+    "        if label_path.exists():\n",
+    "            with open(label_path, 'r') as f:\n",
+    "                for line in f.readlines():\n",
+    "                    class_id, x_center, y_center, width, height = map(float, line.strip().split())\n",
+    "                    labels.append(int(class_id))\n",
+    "                    boxes.append([x_center, y_center, width, height])\n",
+    "\n",
+    "        return boxes, labels\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Kitti_dataset = YoloDarknetDataset(images_dir=img_dir, labels_dir=labels_dir, classes=[\"Cyclist\", \"Pedestrian\", \"car\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample = Kitti_dataset[8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<PIL.Image.Image image mode=RGB size=1242x375>,\n",
+       " {'boxes': tensor([[0.1620, 0.7552, 0.3239, 0.4843],\n",
+       "          [0.3862, 0.7346, 0.2332, 0.5149],\n",
+       "          [0.8769, 0.7619, 0.2445, 0.4710],\n",
+       "          [0.5308, 0.5831, 0.0993, 0.2266],\n",
+       "          [0.6173, 0.5030, 0.0411, 0.1056],\n",
+       "          [0.7411, 0.5580, 0.0579, 0.1650]]),\n",
+       "  'labels': tensor([2, 2, 2, 2, 2, 2])})"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7481"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(Kitti_dataset)"
+   ]
   }
  ],
  "metadata": {
@@ -246,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
