fix training loop

--- a/detection.ipynb
+++ b/detection.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -533,10 +533,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/gustavo/workstation/depth_estimation/codes/rgbd-yolov2/.venv/lib/python3.10/site-packages/lightnet/network/module/_lightnet.py:293: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  state = torch.load(weights_file, 'cpu')\n",
+      "Modules not matching, performing partial update\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "=============================================================================================================================\n",
+       "Layer (type (var_name))                       Input Shape          Output Shape         Param #              Trainable\n",
+       "=============================================================================================================================\n",
+       "YoloV2 (YoloV2)                               [1, 3, 416, 416]     [1, 40, 13, 13]      --                   True\n",
+       "├─FeatureExtractor (backbone)                 [1, 3, 416, 416]     [1, 1024, 13, 13]    --                   True\n",
+       "│    └─Sequential (module)                    [1, 3, 416, 416]     [1, 1024, 13, 13]    --                   True\n",
+       "│    │    └─Conv2dBatchAct (1_convbatch)      [1, 3, 416, 416]     [1, 32, 416, 416]    928                  True\n",
+       "│    │    └─MaxPool2d (2_max)                 [1, 32, 416, 416]    [1, 32, 208, 208]    --                   --\n",
+       "│    │    └─Conv2dBatchAct (3_convbatch)      [1, 32, 208, 208]    [1, 64, 208, 208]    18,560               True\n",
+       "│    │    └─MaxPool2d (4_max)                 [1, 64, 208, 208]    [1, 64, 104, 104]    --                   --\n",
+       "│    │    └─Conv2dBatchAct (5_convbatch)      [1, 64, 104, 104]    [1, 128, 104, 104]   73,984               True\n",
+       "│    │    └─Conv2dBatchAct (6_convbatch)      [1, 128, 104, 104]   [1, 64, 104, 104]    8,320                True\n",
+       "│    │    └─Conv2dBatchAct (7_convbatch)      [1, 64, 104, 104]    [1, 128, 104, 104]   73,984               True\n",
+       "│    │    └─MaxPool2d (8_max)                 [1, 128, 104, 104]   [1, 128, 52, 52]     --                   --\n",
+       "│    │    └─Conv2dBatchAct (9_convbatch)      [1, 128, 52, 52]     [1, 256, 52, 52]     295,424              True\n",
+       "│    │    └─Conv2dBatchAct (10_convbatch)     [1, 256, 52, 52]     [1, 128, 52, 52]     33,024               True\n",
+       "│    │    └─Conv2dBatchAct (11_convbatch)     [1, 128, 52, 52]     [1, 256, 52, 52]     295,424              True\n",
+       "│    │    └─MaxPool2d (12_max)                [1, 256, 52, 52]     [1, 256, 26, 26]     --                   --\n",
+       "│    │    └─Conv2dBatchAct (13_convbatch)     [1, 256, 26, 26]     [1, 512, 26, 26]     1,180,672            True\n",
+       "│    │    └─Conv2dBatchAct (14_convbatch)     [1, 512, 26, 26]     [1, 256, 26, 26]     131,584              True\n",
+       "│    │    └─Conv2dBatchAct (15_convbatch)     [1, 256, 26, 26]     [1, 512, 26, 26]     1,180,672            True\n",
+       "│    │    └─Conv2dBatchAct (16_convbatch)     [1, 512, 26, 26]     [1, 256, 26, 26]     131,584              True\n",
+       "│    │    └─Conv2dBatchAct (17_convbatch)     [1, 256, 26, 26]     [1, 512, 26, 26]     1,180,672            True\n",
+       "│    │    └─MaxPool2d (18_max)                [1, 512, 26, 26]     [1, 512, 13, 13]     --                   --\n",
+       "│    │    └─Conv2dBatchAct (19_convbatch)     [1, 512, 13, 13]     [1, 1024, 13, 13]    4,720,640            True\n",
+       "│    │    └─Conv2dBatchAct (20_convbatch)     [1, 1024, 13, 13]    [1, 512, 13, 13]     525,312              True\n",
+       "│    │    └─Conv2dBatchAct (21_convbatch)     [1, 512, 13, 13]     [1, 1024, 13, 13]    4,720,640            True\n",
+       "│    │    └─Conv2dBatchAct (22_convbatch)     [1, 1024, 13, 13]    [1, 512, 13, 13]     525,312              True\n",
+       "│    │    └─Conv2dBatchAct (23_convbatch)     [1, 512, 13, 13]     [1, 1024, 13, 13]    4,720,640            True\n",
+       "├─ModuleList (neck)                           --                   --                   --                   True\n",
+       "│    └─Sequential (0)                         [1, 1024, 13, 13]    [1, 1024, 13, 13]    --                   True\n",
+       "│    │    └─Conv2dBatchAct (0)                [1, 1024, 13, 13]    [1, 1024, 13, 13]    9,439,232            True\n",
+       "│    │    └─Conv2dBatchAct (1)                [1, 1024, 13, 13]    [1, 1024, 13, 13]    9,439,232            True\n",
+       "│    └─Sequential (1)                         [1, 512, 26, 26]     [1, 256, 13, 13]     --                   True\n",
+       "│    │    └─Conv2dBatchAct (0)                [1, 512, 26, 26]     [1, 64, 26, 26]      32,896               True\n",
+       "│    │    └─Reorg (1)                         [1, 64, 26, 26]      [1, 256, 13, 13]     --                   --\n",
+       "├─Sequential (head)                           [1, 1280, 13, 13]    [1, 40, 13, 13]      --                   True\n",
+       "│    └─Conv2dBatchAct (0)                     [1, 1280, 13, 13]    [1, 1024, 13, 13]    --                   True\n",
+       "│    │    └─ModuleList (layers)               --                   --                   11,798,528           True\n",
+       "│    └─Conv2d (1)                             [1, 1024, 13, 13]    [1, 40, 13, 13]      41,000               True\n",
+       "=============================================================================================================================\n",
+       "Total params: 50,568,264\n",
+       "Trainable params: 50,568,264\n",
+       "Non-trainable params: 0\n",
+       "Total mult-adds (G): 14.67\n",
+       "=============================================================================================================================\n",
+       "Input size (MB): 2.08\n",
+       "Forward/backward pass size (MB): 258.25\n",
+       "Params size (MB): 202.27\n",
+       "Estimated Total Size (MB): 462.60\n",
+       "============================================================================================================================="
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from torchinfo import summary\n",
+    "model = model_builder(num_classes=3)\n",
+    "# Print a summary using torchinfo (uncomment for actual output)\n",
+    "summary(model=model, \n",
+    "        input_size=(1, 3, 416, 416), # make sure this is \"input_size\", not \"input_shape\"\n",
+    "        # col_names=[\"input_size\"], # uncomment for smaller output\n",
+    "        col_names=[\"input_size\", \"output_size\", \"num_params\", \"trainable\"],\n",
+    "        col_width=20,\n",
+    "        row_settings=[\"var_names\"]\n",
+    ") "
+   ]
   }
  ],
  "metadata": {
