--- a/test_model.ipynb
+++ b/test_model.ipynb
@@ -405,7 +405,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Print a summary using torchinfo (uncomment for actual output)\n",
+    "summary(model=model, \n",
+    "        input_size=(32, 3, 224, 224), # make sure this is \"input_size\", not \"input_shape\"\n",
+    "        # col_names=[\"input_size\"], # uncomment for smaller output\n",
+    "        col_names=[\"input_size\", \"output_size\", \"num_params\", \"trainable\"],\n",
+    "        col_width=20,\n",
+    "        row_settings=[\"var_names\"]\n",
+    ") "
+   ]
   }
  ],
  "metadata": {
