--- a/test_nb.ipynb
+++ b/test_nb.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/gustavo/workstation/depth_estimation/codes/rgbd-yolov2/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from torch.utils.data import DataLoader\n",
@@ -22,12 +13,14 @@
     "import os\n",
     "import lightnet as ln\n",
     "from test_script import test_step\n",
-    "from utils import draw_bounding_boxes"
+    "from utils import draw_bounding_boxes, intersection_over_union, to_pixel_coords\n",
+    "from lightnet.util import iou_cwh, iou_tlwh\n",
+    "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +152,7 @@
        ")"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -215,6 +208,244 @@
     "                    class_names=[\"Cyclist\", \"Pedestrian\", \"car\"], \n",
     "                    device=DEVICE)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def mean_average_precision(\n",
+    "    pred_boxes, true_boxes, iou_threshold=0.5, box_format=\"midpoint\", num_classes=20\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Calculates mean average precision \n",
+    "\n",
+    "    Parameters:\n",
+    "        pred_boxes (list): list of lists containing all bboxes with each bboxes\n",
+    "        specified as [train_idx, class_prediction, prob_score, x1, y1, x2, y2]\n",
+    "        true_boxes (list): Similar as pred_boxes except all the correct ones \n",
+    "        iou_threshold (float): threshold where predicted bboxes is correct\n",
+    "        box_format (str): \"midpoint\" or \"corners\" used to specify bboxes\n",
+    "        num_classes (int): number of classes\n",
+    "\n",
+    "    Returns:\n",
+    "        float: mAP value across all classes given a specific IoU threshold \n",
+    "    \"\"\"\n",
+    "\n",
+    "    # list storing all AP for respective classes\n",
+    "    average_precisions = []\n",
+    "\n",
+    "    # used for numerical stability later on\n",
+    "    epsilon = 1e-6\n",
+    "\n",
+    "    for c in range(num_classes):\n",
+    "        detections = []\n",
+    "        ground_truths = []\n",
+    "\n",
+    "        # Go through all predictions and targets,\n",
+    "        # and only add the ones that belong to the\n",
+    "        # current class c\n",
+    "        for detection in pred_boxes:\n",
+    "            if detection[1] == c:\n",
+    "                detections.append(detection)\n",
+    "\n",
+    "        for true_box in true_boxes:\n",
+    "            if true_box[1] == c:\n",
+    "                ground_truths.append(true_box)\n",
+    "\n",
+    "        # find the amount of bboxes for each training example\n",
+    "        # Counter here finds how many ground truth bboxes we get\n",
+    "        # for each training example, so let's say img 0 has 3,\n",
+    "        # img 1 has 5 then we will obtain a dictionary with:\n",
+    "        # amount_bboxes = {0:3, 1:5}\n",
+    "        amount_bboxes = Counter([gt[0] for gt in ground_truths])\n",
+    "\n",
+    "        # We then go through each key, val in this dictionary\n",
+    "        # and convert to the following (w.r.t same example):\n",
+    "        # ammount_bboxes = {0:torch.tensor[0,0,0], 1:torch.tensor[0,0,0,0,0]}\n",
+    "        for key, val in amount_bboxes.items():\n",
+    "            amount_bboxes[key] = torch.zeros(val)\n",
+    "\n",
+    "        # sort by box probabilities which is index 2\n",
+    "        detections.sort(key=lambda x: x[2], reverse=True)\n",
+    "        TP = torch.zeros((len(detections)))\n",
+    "        FP = torch.zeros((len(detections)))\n",
+    "        total_true_bboxes = len(ground_truths)\n",
+    "        \n",
+    "        # If none exists for this class then we can safely skip\n",
+    "        if total_true_bboxes == 0:\n",
+    "            continue\n",
+    "\n",
+    "        for detection_idx, detection in enumerate(detections):\n",
+    "            # Only take out the ground_truths that have the same\n",
+    "            # training idx as detection\n",
+    "            ground_truth_img = [\n",
+    "                bbox for bbox in ground_truths if bbox[0] == detection[0]\n",
+    "            ]\n",
+    "\n",
+    "            num_gts = len(ground_truth_img)\n",
+    "            best_iou = 0\n",
+    "\n",
+    "            for idx, gt in enumerate(ground_truth_img):\n",
+    "                iou = intersection_over_union(\n",
+    "                    torch.tensor(detection[3:]),\n",
+    "                    torch.tensor(gt[3:]),\n",
+    "                    box_format=box_format,\n",
+    "                )\n",
+    "\n",
+    "                if iou > best_iou:\n",
+    "                    best_iou = iou\n",
+    "                    best_gt_idx = idx\n",
+    "\n",
+    "            if best_iou > iou_threshold:\n",
+    "                # only detect ground truth detection once\n",
+    "                if amount_bboxes[detection[0]][best_gt_idx] == 0:\n",
+    "                    # true positive and add this bounding box to seen\n",
+    "                    TP[detection_idx] = 1\n",
+    "                    amount_bboxes[detection[0]][best_gt_idx] = 1\n",
+    "                else:\n",
+    "                    FP[detection_idx] = 1\n",
+    "\n",
+    "            # if IOU is lower then the detection is a false positive\n",
+    "            else:\n",
+    "                FP[detection_idx] = 1\n",
+    "\n",
+    "        TP_cumsum = torch.cumsum(TP, dim=0)\n",
+    "        FP_cumsum = torch.cumsum(FP, dim=0)\n",
+    "        recalls = TP_cumsum / (total_true_bboxes + epsilon)\n",
+    "        precisions = torch.divide(TP_cumsum, (TP_cumsum + FP_cumsum + epsilon))\n",
+    "        precisions = torch.cat((torch.tensor([1]), precisions))\n",
+    "        recalls = torch.cat((torch.tensor([0]), recalls))\n",
+    "        # torch.trapz for numerical integration\n",
+    "        average_precisions.append(torch.trapz(precisions, recalls))\n",
+    "\n",
+    "    return sum(average_precisions) / len(average_precisions)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image, label = test_dataset[785]\n",
+    "model_input = image.unsqueeze(0).to(DEVICE)\n",
+    "model_2.to(DEVICE)\n",
+    "model_2.eval()\n",
+    "\n",
+    "with torch.inference_mode():\n",
+    "    model_output = model_2(model_input)\n",
+    "\n",
+    "box_tensor = GetBoxes_fn(model_output.cpu())\n",
+    "bboxes = nms_fn(box_tensor)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[  0.0000, 401.6958, 198.9166,  26.7211,  60.1183,   0.6683,   2.0000],\n",
+       "        [  0.0000, 198.5423, 227.9210,  26.9997,  63.6332,   0.5809,   2.0000],\n",
+       "        [  0.0000, 169.4732, 206.3575,  11.0781,  26.1820,   0.5390,   2.0000],\n",
+       "        [  0.0000,  59.5102, 297.1416,  71.6959, 112.1295,   0.5274,   2.0000]])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bboxes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bboxes_pixel = []\n",
+    "for bbox in bboxes:\n",
+    "    x, y, h, w = to_pixel_coords(bbox[1:5], 1, 1)\n",
+    "    bboxes_pixel.append(\n",
+    "        [bbox[0].item(), \n",
+    "         bbox[6].item(), \n",
+    "         bbox[5].item() , \n",
+    "         x.item(), \n",
+    "         y.item(),\n",
+    "         h.item(), \n",
+    "         w.item()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.0,\n",
+       "  2.0,\n",
+       "  0.6682568788528442,\n",
+       "  388.335205078125,\n",
+       "  168.85740661621094,\n",
+       "  26.72113037109375,\n",
+       "  60.118316650390625],\n",
+       " [0.0,\n",
+       "  2.0,\n",
+       "  0.5808943510055542,\n",
+       "  185.04241943359375,\n",
+       "  196.10438537597656,\n",
+       "  26.99969482421875,\n",
+       "  63.63316345214844],\n",
+       " [0.0,\n",
+       "  2.0,\n",
+       "  0.5390462279319763,\n",
+       "  163.9341278076172,\n",
+       "  193.2664794921875,\n",
+       "  11.078094482421875,\n",
+       "  26.181976318359375],\n",
+       " [0.0,\n",
+       "  2.0,\n",
+       "  0.527407705783844,\n",
+       "  23.662273406982422,\n",
+       "  241.0768585205078,\n",
+       "  71.69589233398438,\n",
+       "  112.12950134277344]]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bboxes_pixel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
