map nao finalizado

--- a/test_nb.ipynb
+++ b/test_nb.ipynb
@@ -346,6 +346,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 2.0000,  0.4802,  0.5451,  0.0439,  0.1407],\n",
+       "        [ 2.0000,  0.1684,  0.6725,  0.1759,  0.3357],\n",
+       "        [ 2.0000,  0.4065,  0.5100,  0.0320,  0.0730],\n",
+       "        [ 2.0000,  0.5181,  0.4757,  0.0134,  0.0394],\n",
+       "        [ 2.0000,  0.9703,  0.4712,  0.0577,  0.1258],\n",
+       "        [-1.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "        [-1.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "        [-1.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "        [-1.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "        [-1.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "        [-1.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "        [-1.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "        [-1.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "        [-1.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "        [-1.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "        [-1.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "        [-1.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "        [-1.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "        [-1.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "        [-1.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "        [-1.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "        [-1.0000,  0.0000,  0.0000,  0.0000,  0.0000]])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label_boxes = label[\"boxes\"]\n",
+    "label_bboxes = []\n",
+    "for box in label_boxes:\n",
+    "    x, y, h, w = to_pixel_coords(box[1:], 416, 416)\n",
+    "    label_bboxes.append([0, box])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
    "outputs": [
