almost finished map

--- a/test_nb.ipynb
+++ b/test_nb.ipynb
@@ -92,18 +92,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "do_test = False\n",
+    "do_test = True\n",
     "if do_test:\n",
-    "    test_step(\n",
+    "    metric_map, test_loss, pred_boxes, true_boxes = test_step(\n",
     "        model=model,\n",
     "        dataloader=test_dataloader,\n",
+    "        batch_size=BATCH_SIZE,\n",
     "        loss_fn=loss_fn,\n",
     "        device=DEVICE\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(0.1621), [tensor(0.0293), tensor(0.0410), tensor(0.4160)])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metric_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.8449365659914119"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_loss"
    ]
   },
   {
@@ -219,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,6 +283,7 @@
     "        for box in boxes:\n",
     "            if box[0].item() == -1: #supress the padding\n",
     "                continue\n",
+    "            # works with xyxy coords only!\n",
     "            #x1, y1, x2, y2 = box[1:]*416\n",
     "            x1, y1, x2, y2 = to_xyxy_coords(box[1:], 416, 416)\n",
     "            # add image index on the list\n",
@@ -250,6 +292,7 @@
     "            true_boxes.append(true_box)\n",
     "        \n",
     "    for bbox in output_boxes:\n",
+    "        # works with xyxy coords only!\n",
     "        x1, y1, x2, y2 = to_xyxy_coords(bbox[1:5], 1, 1)\n",
     "        #x1, y1, x2, y2 = bbox[1:5]\n",
     "       \n",
