make figure function, depth only model on notebook test_model

--- a/train_nb.ipynb
+++ b/train_nb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -68,6 +68,7 @@
     "\n",
     "#IMG_DIR = \"/home/gustavo/workstation/depth_estimation/codes/rgbd-yolov2/data/images_test/\"\n",
     "TRAIN_IMG_DIR = \"data/data_split/train/images\"\n",
+    "DEPTH_IMG_DIR = \"\"\n",
     "#LABEL_DIR =  \"/home/gustavo/workstation/depth_estimation/codes/rgbd-yolov2/data/labels\"\n",
     "TRAIN_LABEL_DIR =  \"data/data_split/train/labels\"\n",
     "BATCH_SIZE = 8\n",
