treinar model rgb baseline

--- a/train_nb.ipynb
+++ b/train_nb.ipynb
@@ -68,13 +68,13 @@
     "\n",
     "#IMG_DIR = \"/home/gustavo/workstation/depth_estimation/codes/rgbd-yolov2/data/images_test/\"\n",
     "TRAIN_IMG_DIR = \"data/data_split/train/images\"\n",
-    "DEPTH_IMG_DIR = \"\"\n",
+    "TRAIN_DEPTH_DIR = \"data/data_split/train/depth\"\n",
     "#LABEL_DIR =  \"/home/gustavo/workstation/depth_estimation/codes/rgbd-yolov2/data/labels\"\n",
     "TRAIN_LABEL_DIR =  \"data/data_split/train/labels\"\n",
-    "BATCH_SIZE = 8\n",
+    "BATCH_SIZE = 16\n",
     "NUM_WORKERS = os.cpu_count()\n",
-    "LEARNING_RATE = 2e-5\n",
-    "NUM_EPOCHS = 5\n",
+    "LEARNING_RATE = 0.01\n",
+    "NUM_EPOCHS = 100\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "print(f\"Using Device {DEVICE}\")\n",
@@ -99,6 +99,7 @@
     "\n",
     "train_dataset = YoloDarknetDataset(\n",
     "    images_dir=TRAIN_IMG_DIR,\n",
+    "    depth_dir=\n",
     "    labels_dir=TRAIN_LABEL_DIR,\n",
     "    classes=[\"Cyclist\", \"Pedestrian\", \"Car\"],\n",
     "    transform=train_transforms,\n",
