--- a/test_nb.ipynb
+++ b/test_nb.ipynb
@@ -50,6 +50,7 @@
    "source": [
     "TEST_IMG_DIR = \"data/data_split/test/images\"\n",
     "TEST_LABEL_DIR =  \"data/data_split/test/labels\"\n",
+    "TEST_DEPTH_DIR = \"data/data_split/test/depth\"\n",
     "BATCH_SIZE = 8\n",
     "NUM_WORKERS = os.cpu_count()\n",
     "LEARNING_RATE = 2e-5\n",
@@ -76,9 +77,11 @@
     "\n",
     "test_dataset = YoloDarknetDataset(\n",
     "    images_dir=TEST_IMG_DIR,\n",
+    "    depth_dir=TEST_DEPTH_DIR,\n",
     "    labels_dir=TEST_LABEL_DIR,\n",
     "    classes=[\"Cyclist\", \"Pedestrian\", \"Car\"],\n",
     "    transform=test_transforms,\n",
+    "    data_mod=\"RGB\"\n",
     ")\n",
     "\n",
     "test_dataloader = DataLoader(\n",
@@ -92,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +121,7 @@
        "(tensor(0.1621), [tensor(0.0293), tensor(0.0410), tensor(0.4160)])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +141,7 @@
        "1.8449365659914119"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
