--- a/train_nb.ipynb
+++ b/train_nb.ipynb
@@ -133,10 +133,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "empty_list = []"
+   ]
   }
  ],
  "metadata": {
