add txt output for loss and yaml config support

--- a/test_nb.ipynb
+++ b/test_nb.ipynb
@@ -23,8 +23,46 @@
     "from model import model_builder\n",
     "import lightnet as ln\n",
     "from test_script import test_step\n",
-    "from utils import draw_bounding_boxes, mean_average_precision, to_pixel_coords, to_xyxy_coords\n",
+    "from utils import draw_bounding_boxes, mean_average_precision, to_pixel_coords, to_xyxy_coords, load_config\n",
     "from lightnet.util import iou_cwh, iou_tlwh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = load_config(\"configs/train_anyv2_gpu.yaml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'train_img_dir': '/home/escorpiao/workspace/depth-anything-dataset/data/image_splits/train/images',\n",
+       " 'train_depth_dir': '/home/escorpiao/workspace/depth-anything-dataset/data/Depth_anything_v2/train',\n",
+       " 'train_label_dir': '/home/escorpiao/workspace/depth-anything-dataset/data/image_splits/train/labels',\n",
+       " 'batch_size': 16,\n",
+       " 'num_workers': 32,\n",
+       " 'learning_rate': 0.01,\n",
+       " 'num_epochs': 500,\n",
+       " 'device': 'cuda',\n",
+       " 'model_type': 'rgbd',\n",
+       " 'fuse_layer': 15}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config"
    ]
   },
   {
